2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test case for user providing their own
	stack to a POSIX thread.
	* psxstack01/.cvsignore, psxstack01/Makefile.am, psxstack01/init.c,
	psxstack01/psxstack01.doc, psxstack01/psxstack01.scn: New files.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxmsgq04/init.c, psxmsgq04/psxmsgq04.scn: Tinker with test to ensure
	that it hits both failing to allocate memory for the message queue
	name and message buffers.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxintrcritical01/init.c: Lower microseconds per tick so tests run
	quicker and more reliably hit the intended critical section.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add a test to exercise an odd case in
	_POSIX_signals_Clear_signals.
	* psxsignal05/.cvsignore, psxsignal05/Makefile.am, psxsignal05/init.c,
	psxsignal05/psxsignal05.doc, psxsignal05/psxsignal05.scn: New files.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxmsgq04/init.c: Correct typo in configuration so test does as
	intended.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxmsgq04/init.c, psxmsgq04/psxmsgq04.doc, psxmsgq04/psxmsgq04.scn:
	Update to handle ENFILE case now that POSIX message queues and
	message queue file descriptors are configured separately and this
	error is possible.

2009-08-05	Santosh G Vattam <vattam.santosh@gmail.com>

	* Makefile.am, psxmsgq04/init.c, psxmsgq04/psxmsgq04.doc,
	psxmsgq04/psxmsgq04.scn: Exercise running out of memory while
	allocating the message buffers for a POSIX message queue.

2009-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxsignal03/init.c, psxsignal03/psxsignal03.scn,
	psxsignal04/psxsignal04.scn: Correct test numbers in macros so output
	is right. Update both screens.

2009-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, psxsignal03/Makefile.am,